--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.10.2",
+    "@clerk/themes": "^2.2.12",
     "@hookform/resolvers": "^3.9.1",
+    "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.0",
@@ -23,6 +25,7 @@
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
     "express-validator": "^7.2.0",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.459.0",
     "next": "15.0.3",
     "next-themes": "^0.4.3",
