--- a/package.json
+++ b/package.json
@@ -29,14 +29,16 @@
     "crypto-js": "^4.2.0",
     "express-validator": "^7.2.0",
     "firebase": "^9.10.0",
+    "formidable": "^3.5.2",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.459.0",
     "next": "15.0.3",
     "next-themes": "^0.4.3",
     "node-forge": "^1.3.1",
     "peerjs": "^1.5.4",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^19.0.0",
+    "react-audio-voice-recorder": "^2.2.0",
+    "react-dom": "^19.0.0",
     "react-hook-form": "^7.53.2",
     "react-rnd": "^10.4.14",
     "react-router-dom": "^7.1.1",
