--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chatscope/chat-ui-kit-react": "^2.1.1",
+    "@chatscope/chat-ui-kit-styles": "^1.4.0",
     "@clerk/nextjs": "^6.10.2",
     "@clerk/themes": "^2.2.12",
     "@hookform/resolvers": "^3.9.1",
